Backend files and firebase auth init

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,7 @@ coverage/
 
 # Next.js build directory
 .next/
+
+# important files
+signature-db486-firebase-adminsdk-7t93r-4cbb89bc8b.json
+request.rest
