--- a/package.json
+++ b/package.json
@@ -20,16 +20,20 @@
     "axios": "^1.5.0",
     "chai": "^4.3.8",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "express": "^4.17.1",
     "firebase": "^10.3.1",
     "firebase-admin": "^10.0.1",
+    "helmet": "^7.0.0",
     "mocha": "^10.2.0",
     "mongoose": "^6.0.6",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-router-dom": "^6.15.0",
+    "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {}
