--- a/server/package.json
+++ b/server/package.json
@@ -21,11 +21,14 @@
     "express": "^4.18.2",
     "firebase": "^10.3.1",
     "firebase-admin": "^11.10.1",
+    "handlebars": "^4.7.8",
     "helmet": "^7.0.0",
+    "joi": "^17.10.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mocha": "^10.2.0",
     "mongoose": "6.10.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.5"
   }
 }
