--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -30,5 +30,9 @@
     "mongoose": "6.10.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.5"
+  },
+  "devDependencies": {
+    "@types/sinon": "^10.0.16",
+    "sinon": "^16.0.0"
   }
 }
