--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "test": "mocha"
+    "test": "mocha tests/**test.js --timeout 10000"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "chai": "^4.3.8",
+    "chai-http": "^4.4.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -27,12 +28,15 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mocha": "^10.2.0",
-    "mongoose": "6.10.0",
+    "mongoose": "^6.10.0",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.5"
+    "nodemailer": "^6.9.5",
+    "sinon-chai": "^3.7.0"
   },
   "devDependencies": {
     "@types/sinon": "^10.0.16",
+    "faker": "^6.6.6",
+    "request": "^2.88.2",
     "sinon": "^16.0.0"
   }
 }
