--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "react-hook-form": "^7.46.1",
     "react-router-dom": "^6.15.0",
     "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {}
 }
